--- a/slides/slide1.html
+++ b/slides/slide1.html
@@ -143,7 +143,7 @@
         
         <!-- 로고 -->
         <div class="logo">
-            <img src="C:\Users\Benjamin\wiznet\ppt\wiznet_logo.svg" alt="WIZnet Logo">
+            <img src="..\wiznet_logo.svg" alt="WIZnet Logo">
         </div>
     </div>
 </body>
