--- a/slides/slide4.html
+++ b/slides/slide4.html
@@ -274,7 +274,7 @@
         
         <!-- 로고 -->
         <div class="logo">
-            <img src="C:\Users\Benjamin\wiznet\ppt\wiznet_logo.svg" alt="WIZnet Logo">
+            <img src="..\wiznet_logo.svg" alt="WIZnet Logo">
         </div>
     </div>
 
