--- a/slides/slide9.html
+++ b/slides/slide9.html
@@ -304,6 +304,17 @@
                         <div class="font-medium text-gray-800 text-sm">분류 및 데이터 저장 방법 안내</div>
                         <p class="text-gray-600 text-sm mt-1">큐레이션 작업 관련 상세 지침 제공</p>
                     </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="font-medium text-gray-800 text-sm">작업 공간</div>
+                        <a href="https://docs.google.com/spreadsheets/d/1BSBGlaeQuFJhCzzJSzTtjUp_VTyyn34kFUxv7Bx8YDo/edit?usp=sharing" 
+                           class="text-blue-600 hover:text-blue-800 text-sm mt-1 block" 
+                           target="_blank">
+                            <i class="fas fa-external-link-alt mr-1"></i>
+                            구글 스프레드시트 링크
+                        </a>
+                    </div>
                 </div>
                 
                 <!-- 오른쪽: 알림 및 참고사항 -->
