--- a/slides/slide14.html
+++ b/slides/slide14.html
@@ -63,8 +63,22 @@
 
                     <!-- 핵심 메시지 카드 -->
                     <div class="conclusion-card p-8" style="animation-delay:.4s;">
-                        <!-- 첫 번째 메시지 -->
+                        <!-- 첫 번째 메시지 (새로 추가) -->
                         <div class="key-message" style="animation-delay:.6s;">
+                            <div class="key-message-icon" style="background:rgba(239, 68, 68, 0.1);color:#EF4444;">
+                                <i class="fas fa-sitemap"></i>
+                            </div>
+                            <div>
+                                <h4 class="text-xl font-bold text-gray-800 mb-2">고객 채널 통합과 AI 시너지 창출</h4>
+                                <p class="text-gray-600 text-lg leading-relaxed">
+                                    다양한 고객 유입 채널을 효율적으로 통합하고 AI와의 시너지를 통해, 
+                                    담당자의 업무 부담을 경감시키고 일관된 고품질 서비스를 제공하는 기반을 마련합니다.
+                                </p>
+                            </div>
+                        </div>
+
+                        <!-- 기존 첫 번째 메시지 (이제 두 번째) -->
+                        <div class="key-message" style="animation-delay:.8s;">
                             <div class="key-message-icon" style="background:rgba(59,130,246,.1);color:#3B82F6;">
                                 <i class="fas fa-database"></i>
                             </div>
@@ -76,9 +90,9 @@
                                 </p>
                             </div>
                         </div>
-                        
-                        <!-- 두 번째 메시지 -->
-                        <div class="key-message" style="animation-delay:.8s;">
+
+                        <!-- 기존 두 번째 메시지 (이제 세 번째) -->
+                        <div class="key-message" style="animation-delay:1.0s;">
                             <div class="key-message-icon" style="background:rgba(16,185,129,.1);color:#10B981;">
                                 <i class="fas fa-comments"></i>
                             </div>
