--- a/slides/slide11.html
+++ b/slides/slide11.html
@@ -312,17 +312,11 @@
             </div>
         </div>
         
-        <!-- 데이터셋 링크 -->
-        <div class="absolute bottom-12 left-1/2 transform -translate-x-1/2 w-full px-4 flex flex-col items-center" style="z-index: 20;">
-            <a href="https://docs.google.com/spreadsheets/d/1sra2lNsLqsIN-k_P85QqzAPoLLsNiYJwjB98XkquUpY/edit?gid=0#gid=0"
-               target="_blank"
-               rel="noopener noreferrer"
-               class="inline-flex items-center justify-center px-4 py-2 md:px-5 md:py-3 rounded-lg bg-gray-100 hover:bg-gray-200 text-gray-800 font-medium shadow-md hover:shadow-lg transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50"
-               style="min-width: 320px; max-width: calc(100% - 48px);">
-                <i class="fas fa-chart-line text-blue-600 text-base md:text-lg mr-2 md:mr-3"></i>
-                <span class="text-xs md:text-sm text-center">
-                    매주 수집되는 채널톡, 포럼, 챗봇의 데이터들을 필터링 후<br>팀별로 분배하고, FAQ 데이터셋으로 제작합니다.
-                </span>
+        <!-- 작업공간 링크 -->
+        <div class="absolute bottom-20 left-1/2 transform -translate-x-1/2 text-center">
+            <h4 class="text-sm font-semibold text-gray-600 mb-1">작업공간</h4>
+            <a href="https://docs.google.com/spreadsheets/d/1sra2lNsLqsIN-k_P85QqzAPoLLsNiYJwjB98XkquUpY/edit?gid=0#gid=0" target="_blank" class="text-xs text-blue-500 hover:text-blue-700 hover:underline">
+                데이터 쌓는 공간 (Google Sheets)
             </a>
         </div>
 
